---------------------------------------------------------------------------------------------------
Version: 0.2.3
  Bugfixes:
    - Migration scripts are able to recover from GUI corruptions caused by other scripts (https://mods.factorio.com/mod/dana/discussion/5f36f18423fa1c25793a291f).

---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-08-16
  Bugfixes:
    - Fix crash at start-up caused by fluid-powered boilers. (https://mods.factorio.com/mod/dana/discussion/5f38a575532359df0888b9fa)

---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2020-08-15
  Features:
    - Support of prototype changes caused by mod update/install/uninstall.
  Bugfixes:
    - Fix crash caused while accessing missing prototypes. (https://mods.factorio.com/mod/dana/discussion/5f36f18423fa1c25793a291f)

---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2020-08-10
  Features:
    - Node aggregation: an intermediate produced by a single transform may be displayed as a single node. (https://raw.githubusercontent.com/vsaulue/factorio-dana/assets/v0_2/node-aggregation.png)
  Changes:
    - Transform nodes are slightly brighter.

---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2020-07-28
  Bugfixes:
    - Fix crash on new player joining in multiplayer. (https://forums.factorio.com/viewtopic.php?p=503291#p503291)
    - Fix crash on right clicking an item/fluid selection button. (https://github.com/vsaulue/factorio-dana/issues/1)

---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2020-07-26
  Info:
    - Initial release.